tests/spec/parse/snapshots/let_else_basic.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() -> Option<int> {
    let Some(x) = opt else { return None; };
    Some(x)
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Constructor {
            name: "Option",
            params: [
                Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 21,
                        byte_length: 3,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 14,
                byte_length: 11,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: EnumVariant {
                                identifier: "Some",
                                fields: [
                                    Identifier {
                                        identifier: "x",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 39,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                ],
                                rest: false,
                                resolution: Unresolved,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 34,
                                    byte_length: 7,
                                },
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Identifier {
                            value: "opt",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 44,
                                byte_length: 3,
                            },
                            resolution: Unresolved,
                        },
                        mode: Else {
                            block: Block {
                                items: [
                                    Return {
                                        expression: Identifier {
                                            value: "None",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 62,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 55,
                                            byte_length: 11,
                                        },
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 53,
                                    byte_length: 16,
                                },
                            },
                            else_span: Span {
                                file_id: 0,
                                byte_offset: 48,
                                byte_length: 4,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 30,
                            byte_length: 39,
                        },
                    },
                    Call {
                        expression: Identifier {
                            value: "Some",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 73,
                                byte_length: 4,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Identifier {
                                value: "x",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 78,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 73,
                            byte_length: 7,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 26,
                    byte_length: 56,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 81,
        },
    },
]
