tests/spec/parse/snapshots/let_else_complex_pattern.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let (a, Some(b)) = tuple else { break; };
    use_values(a, b);
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Tuple {
                                elements: [
                                    Identifier {
                                        identifier: "a",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 20,
                                            byte_length: 1,
                                        },
                                        binding: None,
                                    },
                                    EnumVariant {
                                        identifier: "Some",
                                        fields: [
                                            Identifier {
                                                identifier: "b",
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 28,
                                                    byte_length: 1,
                                                },
                                                binding: None,
                                            },
                                        ],
                                        rest: false,
                                        resolution: Unresolved,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 23,
                                            byte_length: 7,
                                        },
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 12,
                                },
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Identifier {
                            value: "tuple",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 34,
                                byte_length: 5,
                            },
                            resolution: Unresolved,
                        },
                        mode: Else {
                            block: Block {
                                items: [
                                    Break {
                                        value: None,
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 47,
                                            byte_length: 5,
                                        },
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 45,
                                    byte_length: 10,
                                },
                            },
                            else_span: Span {
                                file_id: 0,
                                byte_offset: 40,
                                byte_length: 4,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 40,
                        },
                    },
                    Call {
                        expression: Identifier {
                            value: "use_values",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 59,
                                byte_length: 10,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Identifier {
                                value: "a",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 70,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            Identifier {
                                value: "b",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 73,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 59,
                            byte_length: 16,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 67,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 77,
        },
    },
]
