tests/spec/parse/snapshots/let_else_with_break.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    loop {
      let Some(item) = iter.next() else { break; };
      process(item);
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Loop {
                        body: Block {
                            items: [
                                Let {
                                    binding: Binding {
                                        pattern: EnumVariant {
                                            identifier: "Some",
                                            fields: [
                                                Identifier {
                                                    identifier: "item",
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 35,
                                                        byte_length: 4,
                                                    },
                                                    binding: None,
                                                },
                                            ],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 30,
                                                byte_length: 10,
                                            },
                                        },
                                        annotation: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                    },
                                    value: Call {
                                        expression: DotAccess {
                                            expression: Identifier {
                                                value: "iter",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 43,
                                                    byte_length: 4,
                                                },
                                                resolution: Unresolved,
                                            },
                                            member: "next",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 43,
                                                byte_length: 9,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 43,
                                            byte_length: 11,
                                        },
                                        call_kind: Unresolved,
                                    },
                                    mode: Else {
                                        block: Block {
                                            items: [
                                                Break {
                                                    value: None,
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 62,
                                                        byte_length: 5,
                                                    },
                                                },
                                            ],
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 60,
                                                byte_length: 10,
                                            },
                                        },
                                        else_span: Span {
                                            file_id: 0,
                                            byte_offset: 55,
                                            byte_length: 4,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 26,
                                        byte_length: 44,
                                    },
                                },
                                Call {
                                    expression: Identifier {
                                        value: "process",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 76,
                                            byte_length: 7,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Identifier {
                                            value: "item",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 84,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 76,
                                        byte_length: 13,
                                    },
                                    call_kind: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 20,
                                byte_length: 74,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 79,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 85,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 95,
        },
    },
]
