tests/spec/parse/snapshots/let_else_with_continue.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    for item in items {
      let Valid(data) = validate(item) else { continue; };
      process(data);
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    For {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "item",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 4,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        iterable: Identifier {
                            value: "items",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 5,
                            },
                            resolution: Unresolved,
                        },
                        body: Block {
                            items: [
                                Let {
                                    binding: Binding {
                                        pattern: EnumVariant {
                                            identifier: "Valid",
                                            fields: [
                                                Identifier {
                                                    identifier: "data",
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 49,
                                                        byte_length: 4,
                                                    },
                                                    binding: None,
                                                },
                                            ],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 43,
                                                byte_length: 11,
                                            },
                                        },
                                        annotation: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                    },
                                    value: Call {
                                        expression: Identifier {
                                            value: "validate",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 57,
                                                byte_length: 8,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [
                                            Identifier {
                                                value: "item",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 66,
                                                    byte_length: 4,
                                                },
                                                resolution: Unresolved,
                                            },
                                        ],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 57,
                                            byte_length: 14,
                                        },
                                        call_kind: Unresolved,
                                    },
                                    mode: Else {
                                        block: Block {
                                            items: [
                                                Continue {
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 79,
                                                        byte_length: 8,
                                                    },
                                                },
                                            ],
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 77,
                                                byte_length: 13,
                                            },
                                        },
                                        else_span: Span {
                                            file_id: 0,
                                            byte_offset: 72,
                                            byte_length: 4,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 39,
                                        byte_length: 51,
                                    },
                                },
                                Call {
                                    expression: Identifier {
                                        value: "process",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 96,
                                            byte_length: 7,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Identifier {
                                            value: "data",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 104,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 96,
                                        byte_length: 13,
                                    },
                                    call_kind: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 33,
                                byte_length: 81,
                            },
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 99,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 105,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 115,
        },
    },
]
